src/test/deca/syntax/valid/synt/DeclarationVariable2.deca
// Description:
//    Programme minimaliste testant le syntaxe de DECL_VAR
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    int a=55,b=52;
}
