src/test/deca/syntax/invalid/synt/assign.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//     mismatched input '==' expecting {'=', ',', ';'}
//
// Historique:
//    cree le 01/01/2022

{
boolean a == true;
}